--- a/sites/toxic.css
+++ b/sites/toxic.css
@@ -6,6 +6,11 @@
   background: rgba(255, 0, 0, 0.5) !important;
 }
 
+[data-average-toxicity-class='NaN'] {
+  background: rgba(255, 0, 0, 1) !important;
+}
+
+
 .modern {
     display: inline-block;
     margin: 10px;
