--- a/sites/toxic.css
+++ b/sites/toxic.css
@@ -1,8 +1,8 @@
-[data-average-toxicity-class='6'], [data-average-toxicity-class='7'], [data-average-toxicity-class='8'] {
+[data-average-toxicity-class='6'], [data-average-toxicity-class='5'] {
   background: rgba(255, 0, 0, 0.1) !important;
 }
 
-[data-average-toxicity-class='9'], [data-average-toxicity-class='10'] {
+[data-average-toxicity-class='7'], [data-average-toxicity-class='8'], [data-average-toxicity-class='9'], [data-average-toxicity-class='10'] {
   background: rgba(255, 0, 0, 0.5) !important;
 }
 
